--- a/.vuepress/theme/styles/index.styl
+++ b/.vuepress/theme/styles/index.styl
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@require './code.styl';
+
 html, body {
     padding: 0;
     margin: 0;
@@ -23,4 +26,52 @@ html, body {
     background: #ffffff;
     padding: 1rem;
     margin-top: 0;
+}
+
+.code-copy {
+    position: absolute;
+    z-index: 3;
+    bottom: 0.1em;
+    right: 0.1em;
+}
+
+.code-copy svg {
+    width: 0.8rem;
+    height: 0.8rem;
+}
+
+.code-copy span {
+    bottom: 0.3rem;
+    right: 1.6rem;
+    font-size: 0.5rem;
+    line-height: 0.3rem;
+}
+
+.tag-1 {
+    color: #ffffff;
+    background-color: rgba(10, 10, 1, 0.2);
+    border-radius: 1rem;
+    padding: 0.3rem 0.9rem;
+    font-size: 12px;
+    text-decoration: none;
+    line-height: 0.6rem;
+    margin-right: 0.25rem;
+    max-width: 5rem;
+}
+
+.level-1 {
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+}
+
+.level-2 {
+    font-size: 0.9rem;
+    line-height: 1.7rem;
+    padding-left: 1rem;
+}
+
+.level-3 {
+    font-size: 0.7rem;
+    line-height: 1.5rem;
+    padding-left: 2rem;
 }
