--- a/.vuepress/theme/styles/index.styl
+++ b/.vuepress/theme/styles/index.styl
@@ -14,18 +14,8 @@ html, body {
     background-color: #ffffff;
 }
 
-.guestbook .vssue {
-    padding: 0;
-}
-
-.guestbook .vssue-header {
+.vssue-1 .vssue-header {
     display: none;
-}
-
-.guestbook .vssue-new-comment {
-    background: #ffffff;
-    padding: 1rem;
-    margin-top: 0;
 }
 
 .code-copy {
