--- a/.vuepress/theme/styles/code.styl
+++ b/.vuepress/theme/styles/code.styl
@@ -1,4 +1,4 @@
-.content__default {
+.markdown-body {
     code {
         color: lighten($textColor, 20%);
         padding: 0.1rem 0.4rem;
@@ -19,7 +19,7 @@
     }
 }
 
-.content__default {
+.markdown-body {
     pre, pre[class*='language-'] {
         line-height: 1.4;
         padding: 1.25rem 1.5rem;
