--- a/.vuepress/theme/styles/index.styl
+++ b/.vuepress/theme/styles/index.styl
@@ -65,3 +65,18 @@ html, body {
     line-height: 1.5rem;
     padding-left: 2rem;
 }
+
+.vssue .vssue-comments .vssue-comment .vssue-comment-footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.vssue .vssue-comments .vssue-comment .vssue-comment-footer .vssue-comment-reactions, .vssue .vssue-comments .vssue-comment .vssue-comment-footer .vssue-comment-reactions .vssue-comment-reaction, .vssue .vssue-comments .vssue-comment .vssue-comment-footer .vssue-comment-operations {
+    display: flex !important;
+    align-items: center;
+}
+
+.vssue .vssue-comments .vssue-comment .vssue-comment-footer .vssue-icon {
+    margin-right: 0.2rem;
+    margin-top: 0.13rem;
+}
